--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <version>3.5.3.1</version>
         </dependency>
 
+        <!--邮件-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!-- 测试 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
